<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name_text"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/name"
        android:textAlignment="center"
        style="@style/NameStyle"
        android:textSize="@dimen/text_size"/>

    <EditText
        android:id="@+id/nickname_EditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/nickname"
        android:layout_gravity="center_horizontal"
        android:inputType="textPersonName"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:autofillHints="" />


    <Button
        android:id="@+id/done_Button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/done" />

    <TextView
        android:id="@+id/nickname_TextView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone"/>



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:src="@drawable/image"
        android:contentDescription="@string/imagedescription"/>


    <ScrollView
        android:id="@+id/bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp">
        
        <LinearLayout
            android:id="@+id/bio_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bio_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                style="@style/NameStyle"
                android:textSize="@dimen/text_size"
                android:textAlignment="textStart"
                android:lineSpacingMultiplier="1.5">

            </TextView>

        </LinearLayout>
        
        
        
    </ScrollView>
        
        


</LinearLayout>